# backend-physical-ai-and-humanoid-robotics

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.specify/memory/: constitution.md
app/: main.py
docs/reverse-engineered/: intelligence-object.md  plan.md  spec.md  tasks.md
history/prompts/001-rag-chatbot/: 0001-create-rag-chatbot-spec.spec.prompt.md  0002-rag-chatbot-clarify-spec.spec.prompt.md  0003-rag-chatbot-implementation-plan.plan.prompt.md  0004-rag-chatbot-generate-tasks.tasks.prompt.md  0005-implement-rag-chatbot-backend-user-story-1.green.prompt.md  0006-fix-ingestion-path-report-issues.refactor.prompt.md  0007-unified-ingestion-system-implementation.feature.prompt.md  001-implement-rag-chatbot-backend.green.prompt.md
history/prompts/constitution/: 0001-create-rag-system-constitution.constitution.prompt.md  0002-strengthen-constitution-v1-1-0.constitution.prompt.md
history/prompts/general/: 0001-github-repository-creation-and-initial-push.general.prompt.md  0002-rag-chatbot-requirements-discussion.general.prompt.md  0003-rag-requirements-clarification.general.prompt.md  0004-final-rag-requirements-clarified.general.prompt.md
specs/001-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/api/: chat.py  health.py  ingestion.py
src/chat/: __init__.py  models.py  service.py
src/core/: __init__.py  config.py  embeddings.py  generation.py  vector.py
src/crawler/: scraper.py  sitemap.py
src/ingestion/: models.py  processors.py  service.py  validators.py
src/rag/: fallback.py  generation.py  models.py  retrieval.py
src/utils/: __init__.py  chunking.py  dedup.py  logging.py
(+3 files in other folders)
